# caterm

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  TODO.md  dev.sh
caterm/: Cargo.toml
caterm-relay/: Cargo.toml
caterm-relay/src/: auth.rs  main.rs  routing.rs
caterm/src/: config.rs  main.rs  pty.rs  relay.rs
caterm/src/session_manager/: command.rs  daemon_state.rs  error.rs  event.rs  mod.rs  pane.rs  request.rs  server.rs  snapshot.rs  window.rs
caterm/tests/: cli_commands.rs
mac/: .gitignore  Makefile
mac/Caterm/Caterm/: CatermApp.swift  ContentView.swift
mac/Caterm/Caterm.xcodeproj/: project.pbxproj
mac/Caterm/Caterm.xcodeproj/project.xcworkspace/xcuserdata/eric.xcuserdatad/: UserInterfaceState.xcuserstate
mac/Caterm/Caterm.xcodeproj/xcuserdata/eric.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: agent.rs  config.rs  main.rs  protocol.rs  pty.rs  session_manager.rs
src/session_manager/: event.rs  mod.rs  pane.rs  request.rs  server.rs  session.rs  window.rs
