[package]
name = "caterm-agent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CLI agent for Caterm"

[dependencies]
anyhow = "1.0"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
