[package]
name = "caterm-relay"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Relay server package for Caterm"
readme = "../README.md"

default-run = "caterm-relay"

[[bin]]
name = "caterm-relay"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
http = "1.4"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }
