[package]
name = "caterm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Persistent terminal server for Caterm"
readme = "../README.md"

default-run = "caterm"

[[bin]]
name = "caterm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
libc = "0.2"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.15"
